# iot_mecanum_car

./: LICENSE  README.md
code/common_code/: main.cpp  protocol说明.md
code/common_code/protocol/: pbz_protocol.c  pbz_protocol.h
code/common_code/simple_communicate_protocol/: CMakeLists.txt
code/control_upper/: UiBridge.cpp  UiBridge.h  main.cpp  upper.pro
code/control_upper/ui/: Motion.qml  root.qml
code/iot_mecanum_car_client/: BackendThread.cpp  BackendThread.h  NetIpHelper.cpp  NetIpHelper.h  iot_mecanum_car_client.pro  main.cpp
code/iot_mecanum_car_client/CustomProtocol/: iot_mecanum_car_protocol.c  iot_mecanum_car_protocol.h
code/iot_mecanum_car_client/TcpClient/: TcpClient.cpp  TcpClient.h
code/iot_mecanum_car_client/UI/: main.qml
code/iot_mecanum_car_controller/: .mxproject  iot_mecanum_car_controller.ioc  todo.md
code/iot_mecanum_car_controller/MDK-ARM/: iot_mecanum_car_controller.uvgui.30964  iot_mecanum_car_controller.uvguix.30964  iot_mecanum_car_controller.uvguix.Administrator  (+6 more)
code/iot_mecanum_car_iot_soc/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
code/iot_mecanum_car_iot_soc/components/bsp/: CMakeLists.txt  bsp.cpp  bsp.h
code/iot_mecanum_car_iot_soc/components/bsp/led/: SysLed.cpp  SysLed.h
code/iot_mecanum_car_iot_soc/components/bsp/save/: bsp_save.cpp  bsp_save.h
code/iot_mecanum_car_iot_soc/components/bsp/uart/: bsp_uart.c  bsp_uart.h
code/iot_mecanum_car_iot_soc/components/bsp/wifi/: bsp_wifi.c  bsp_wifi.cpp  bsp_wifi.h
pcb/iot_macunum_board/: iot_macuman_board.SchDoc  iot_macunum_board.PrjPcb  核心板.SchDoc
(+349 files in other folders)
